<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/lbl_appName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_eur"
        android:id="@+id/lbl_eur"
        android:layout_below="@+id/lbl_appName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_usd"
        android:id="@+id/lbl_usd"
        android:layout_below="@+id/btn_convert"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input_divisa"
        android:layout_alignTop="@+id/lbl_eur"
        android:layout_alignRight="@+id/btn_convert"
        android:layout_alignEnd="@+id/btn_convert"
        android:layout_toRightOf="@+id/lbl_usd"
        android:layout_toEndOf="@+id/lbl_usd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_rate"
        android:id="@+id/lbl_exchange"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input_exchange"
        android:layout_alignTop="@+id/lbl_exchange"
        android:layout_toRightOf="@+id/lbl_commission"
        android:layout_toEndOf="@+id/lbl_commission" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_convert"
        android:id="@+id/btn_convert"
        android:layout_below="@+id/input_divisa"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="convert" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_commission"
        android:id="@+id/lbl_commission"
        android:layout_alignTop="@+id/input_commission"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/input_commission"
        android:layout_below="@+id/input_exchange"
        android:layout_toRightOf="@+id/lbl_commission"
        android:layout_toEndOf="@+id/lbl_commission" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_eur_to_usd"
        android:id="@+id/btn_change"
        android:layout_below="@+id/lbl_commission"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:onClick="changeLblUsdEuro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=" "
        android:id="@+id/lbl_result"
        android:layout_alignTop="@+id/lbl_usd"
        android:layout_alignLeft="@+id/btn_change"
        android:layout_alignStart="@+id/btn_change" />

</RelativeLayout>